--- a/.github/workflows/generate_videos.yml
+++ b/.github/workflows/generate_videos.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Generate Videos
         run: |
           chmod +x generate_videos.sh
-          .generate_videos.sh
+          ls
+          ./generate_videos.sh
 
       - name: Upload Generated Videos
         uses: actions/upload-artifact@v4
